--- a/trading/analysis/technical-analysis.mdx
+++ b/trading/analysis/technical-analysis.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Technical Analysis Complete Guide'
+title: 'Technical Analysis'
 description: 'Master chart reading, pattern recognition, and price prediction through comprehensive technical analysis education'
 icon: 'chart-candlestick'
 ---
