--- a/trading/company-kpis.mdx
+++ b/trading/company-kpis.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Financial KPIs & Company Metrics Mastery'
+title: 'Company KPIs & Metrics'
 description: 'Complete educational guide to understanding, analyzing, and applying key performance indicators for intelligent stock evaluation'
 icon: 'chart-bar'
 ---
@@ -196,12 +196,6 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
               <li>Requires strong execution to justify valuation</li>
             </ul>
             <p className="mt-2"><strong>Examples:</strong> Technology (NVDA: 65x), Growth stocks (TSLA: 45x), Biotech (MRNA: 35x)</p>
-          </div>
-        </div>
-      </div>
-            • Potentially overvalued<br/>
-            • Technology companies<br/>
-            • Examples: NVIDIA, Tesla
           </div>
         </div>
       </div>
@@ -501,19 +495,19 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       **Types of Profit Margins:**
 
       <div className="space-y-2">
-        <div className="bg-slate-900 p-2 rounded border-l-4 border-gray-500">
+        <div className="bg-slate-800">
           <div className="font-semibold text-slate-200">Gross Profit Margin</div>
           <div className="text-sm text-slate-300">(Revenue - COGS) ÷ Revenue</div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-1">Shows pricing power and production efficiency</div>
         </div>
 
-        <div className="bg-slate-900 p-2 rounded border-l-4 border-gray-500">
+        <div className="bg-slate-800">
           <div className="font-semibold text-slate-200">Operating Margin</div>
           <div className="text-sm text-slate-300">Operating Income ÷ Revenue</div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-1">Core business profitability excluding financing</div>
         </div>
 
-        <div className="bg-slate-900 p-2 rounded border-l-4 border-gray-500">
+        <div className="bg-slate-800">
           <div className="font-semibold text-slate-200">Net Profit Margin</div>
           <div className="text-sm text-slate-300">Net Income ÷ Revenue</div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-1">Bottom-line profitability after all expenses</div>
@@ -535,19 +529,19 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       **Key Return Ratios:**
 
       <div className="space-y-2">
-        <div className="bg-slate-900 p-2 rounded border-l-4 border-gray-500">
+        <div className="bg-slate-800">
           <div className="font-semibold text-slate-200">Return on Assets (ROA)</div>
           <div className="text-sm text-slate-300">Net Income ÷ Total Assets</div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-1">How efficiently company uses its assets</div>
         </div>
 
-        <div className="bg-slate-900 p-2 rounded border-l-4 border-gray-500">
+        <div className="bg-slate-800">
           <div className="font-semibold text-slate-200">Return on Equity (ROE)</div>
           <div className="text-sm text-slate-300">Net Income ÷ Shareholders' Equity</div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-1">Returns generated on shareholders' investment</div>
         </div>
 
-        <div className="bg-slate-900 p-2 rounded border-l-4 border-gray-500">
+        <div className="bg-slate-800">
           <div className="font-semibold text-slate-200">Return on Invested Capital (ROIC)</div>
           <div className="text-sm text-slate-300">NOPAT ÷ Invested Capital</div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-1">Most comprehensive profitability measure</div>
@@ -1054,7 +1048,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
   <h3 className="text-xl font-bold mb-4">Quick Analysis Template</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-    <div className="bg-white p-4 rounded border">
+    <div className="bg-slate-900/50 p-4 rounded border">
       <h4 className="font-bold text-slate-300 mb-2">Valuation</h4>
       <div className="text-sm space-y-1">
         <div>P/E Ratio: ___</div>
@@ -1065,7 +1059,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       </div>
     </div>
 
-    <div className="bg-white p-4 rounded border">
+    <div className="bg-slate-900/50 p-4 rounded border">
       <h4 className="font-bold text-slate-300 mb-2">Profitability</h4>
       <div className="text-sm space-y-1">
         <div>Net Margin: ___%</div>
@@ -1076,17 +1070,17 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       </div>
     </div>
 
-    <div className="bg-white p-4 rounded border">
+    <div className="bg-slate-900/50 p-4 rounded border">
       <h4 className="font-bold text-slate-300 mb-2">Financial Health</h4>
       <div className="text-sm space-y-1">
         <div>Current Ratio: ___</div>
         <div>D/E Ratio: ___</div>
         <div>Interest Coverage: ___</div>
-        <div>Cash/Share: $___</div>
+        <div>Cash/Share: ___</div>
       </div>
     </div>
 
-    <div className="bg-white p-4 rounded border">
+    <div className="bg-slate-900/50 p-4 rounded border">
       <h4 className="font-bold text-slate-300 mb-2">Growth</h4>
       <div className="text-sm space-y-1">
         <div>Revenue Growth: ___%</div>
@@ -1206,7 +1200,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
   <Card title="Advanced Ratios" icon="calculator" >
     <div className="space-y-4">
       **Price-to-Cash Flow (P/CF):**
-      <div className="bg-slate-900 p-3 rounded border-l-4 border-gray-500">
+      <div className="bg-slate-800">
         <div className="text-sm">
           <strong>Formula:</strong> Market Cap ÷ Operating Cash Flow<br/>
           <strong>Use:</strong> Values companies based on actual cash generation<br/>
@@ -1215,7 +1209,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       </div>
 
       **Price-to-Free Cash Flow (P/FCF):**
-      <div className="bg-slate-900 p-3 rounded border-l-4 border-gray-500">
+      <div className="bg-slate-800">
         <div className="text-sm">
           <strong>Formula:</strong> Market Cap ÷ Free Cash Flow<br/>
           <strong>Use:</strong> Shows how many years to recover investment<br/>
@@ -1224,7 +1218,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       </div>
 
       **Price-to-Tangible Book Value:**
-      <div className="bg-slate-900 p-3 rounded border-l-4 border-gray-500">
+      <div className="bg-slate-800">
         <div className="text-sm">
           <strong>Formula:</strong> Market Cap ÷ (Book Value - Intangible Assets)<br/>
           <strong>Use:</strong> More conservative than P/B, excludes goodwill<br/>
@@ -1237,7 +1231,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
   <Card title="Per-Share Metrics" icon="coins" >
     <div className="space-y-4">
       **Earnings Per Share (EPS):**
-      <div className="bg-slate-900 p-3 rounded border-l-4 border-gray-500">
+      <div className="bg-slate-800">
         <div className="text-sm">
           <strong>Formula:</strong> Net Income ÷ Outstanding Shares<br/>
           <strong>Types:</strong> Basic EPS vs Diluted EPS<br/>
@@ -1246,7 +1240,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       </div>
 
       **Book Value Per Share (BVPS):**
-      <div className="bg-slate-900 p-3 rounded border-l-4 border-gray-500">
+      <div className="bg-slate-800">
         <div className="text-sm">
           <strong>Formula:</strong> Total Equity ÷ Outstanding Shares<br/>
           <strong>Use:</strong> Net asset value per share<br/>
@@ -1255,7 +1249,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       </div>
 
       **Cash Per Share:**
-      <div className="bg-slate-900 p-3 rounded border-l-4 border-gray-500">
+      <div className="bg-slate-800">
         <div className="text-sm">
           <strong>Formula:</strong> (Cash + Short-term Investments) ÷ Shares<br/>
           <strong>Use:</strong> Liquidity cushion per share<br/>
@@ -1376,7 +1370,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
           <div><strong>Formula:</strong> Net Income ÷ Average Shareholders' Equity</div>
 
           <div><strong>DuPont Analysis Breakdown:</strong></div>
-          <div className="bg-white p-3 rounded border">
+          <div className="bg-slate-900/50 p-3 rounded border">
             <div className="text-xs">
               ROE = <span className="font-bold text-slate-500 dark:text-slate-400">Net Margin</span> ×
               <span className="font-bold text-slate-500 dark:text-slate-400">Asset Turnover</span> ×
@@ -1421,17 +1415,17 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
       <div><strong>Why This Matters:</strong> Shows business momentum and market demand trends</div>
 
       <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <div className="bg-white p-3 rounded border">
+        <div className="bg-slate-900/50 p-3 rounded border">
           <div className="font-bold text-slate-300">Growth Stage Companies</div>
           <div className="text-xs mt-1">Target: 15-30% YoY growth</div>
           <div className="text-xs">Indicates scaling business model</div>
         </div>
-        <div className="bg-white p-3 rounded border">
+        <div className="bg-slate-900/50 p-3 rounded border">
           <div className="font-bold text-slate-300">Mature Companies</div>
           <div className="text-xs mt-1">Target: 3-8% YoY growth</div>
           <div className="text-xs">Steady, sustainable expansion</div>
         </div>
-        <div className="bg-white p-3 rounded border">
+        <div className="bg-slate-900/50 p-3 rounded border">
           <div className="font-bold text-slate-300">Turnaround Stories</div>
           <div className="text-xs mt-1">Watch: Return to positive growth</div>
           <div className="text-xs">Recovery from operational issues</div>
@@ -1661,19 +1655,19 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
         <div>
           <strong>Yield Categories & Implications:</strong>
           <div className="mt-2 space-y-2">
-            <div className="bg-white p-2 rounded border-l-4 border-gray-500">
+            <div className="bg-slate-800">
               <div className="font-semibold text-slate-300">0-2% Yield</div>
               <div className="text-xs">Growth companies reinvesting profits</div>
             </div>
-            <div className="bg-white p-2 rounded border-l-4 border-gray-500">
+            <div className="bg-slate-800">
               <div className="font-semibold text-slate-300">2-4% Yield</div>
               <div className="text-xs">Balanced growth and income approach</div>
             </div>
-            <div className="bg-white p-2 rounded border-l-4 border-gray-500">
+            <div className="bg-slate-800">
               <div className="font-semibold text-slate-300">4-6% Yield</div>
               <div className="text-xs">Income-focused, mature companies</div>
             </div>
-            <div className="bg-white p-2 rounded border-l-4 border-gray-500">
+            <div className="bg-slate-800">
               <div className="font-semibold text-slate-300">6%+ Yield</div>
               <div className="text-xs">Investigate: distressed or unsustainable?</div>
             </div>
@@ -1695,7 +1689,7 @@ Understanding financial metrics isn't just about memorizing formulas—it's abou
     </div>
   </div>
 
-  <div className="bg-white border border-slate-800 p-4 rounded-lg">
+  <div className="bg-slate-900/50 border border-slate-800 p-4 rounded-lg">
     <h4 className="font-bold text-slate-200 mb-3">Dividend Safety Metrics</h4>
 
     <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
