--- a/trading/fundamentals/brokers.mdx
+++ b/trading/fundamentals/brokers.mdx
@@ -8,46 +8,40 @@ icon: 'building-columns'
   <Icon icon="building-columns" size={16} />
   <span>8 min read</span>
   <span>•</span>
-  <span>Last updated: July 2025</span>
+  <span>Last updated: January 2025</span>
 </div>
-
-<Frame>
-  <img
-    className="block dark:hidden"
-    src="/images/brokers-platform-light.png"
-    alt="Trading Platform Comparison Dashboard"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/brokers-platform-dark.png"
-    alt="Trading Platform Comparison Dashboard"
-  />
-</Frame>
 
 ## What is a Broker?
 
-<div className="bg-gray-50">
+<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 my-8">
   <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-gray-50">
-      <span className="text-white text-2xl"></span>
+    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
+      <Icon icon="building-columns" size={24} className="text-slate-300" />
     </div>
     <div>
-      <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200">Your Gateway to Markets</h3>
-      <p className="text-slate-600 dark:text-slate-400 text-sm">Licensed intermediary that executes your trades</p>
+      <h3 className="text-xl font-bold text-slate-200">Your Gateway to Markets</h3>
+      <p className="text-slate-400 text-sm">Licensed intermediary that executes your trades</p>
     </div>
   </div>
-  <p className="text-slate-700 dark:text-slate-300">
+  <p className="text-slate-300">
     A broker is a licensed financial intermediary that facilitates the buying and selling of securities on behalf of investors. They provide access to stock exchanges and other financial markets that individual investors can't access directly.
   </p>
+
+  <div className="bg-blue-900/20 border border-blue-800 p-4 rounded-lg mt-6">
+    <h4 className="text-blue-300 font-semibold mb-2">Key Function</h4>
+    <p className="text-blue-200 text-sm">
+      Brokers act as the middleman between you and the stock market. When you place an order to buy Apple stock, your broker routes that order to the appropriate exchange and handles the settlement process.
+    </p>
+  </div>
 </div>
 
 ## Types of Brokers
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-gray-50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg"></span>
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center border border-slate-600">
+        <Icon icon="robot" size={20} className="text-slate-300" />
       </div>
       <h4 className="text-xl font-bold text-gray-900 dark:text-gray-100">Discount Brokers</h4>
     </div>
@@ -57,23 +51,23 @@ icon: 'building-columns'
         Low-cost, self-directed trading with minimal services
       </p>
 
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-2">Pros:</div>
         <div className="space-y-1 text-xs text-gray-700 dark:text-gray-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Very low fees (Free to $5 per trade)</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Easy online platforms</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Mobile apps available</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Perfect for DIY investors</span>
           </div>
         </div>
@@ -86,10 +80,10 @@ icon: 'building-columns'
     </div>
   </div>
 
-  <div className="bg-gray-50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">👨‍</span>
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
+        <span className="text-white text-lg">user</span>
       </div>
       <h4 className="text-xl font-bold text-gray-900 dark:text-gray-100">Full-Service Brokers</h4>
     </div>
@@ -99,23 +93,23 @@ icon: 'building-columns'
         Comprehensive services including advice and portfolio management
       </p>
 
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-2">Pros:</div>
         <div className="space-y-1 text-xs text-gray-700 dark:text-gray-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Personal financial advisor</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Research and analysis</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Portfolio management</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Comprehensive planning</span>
           </div>
         </div>
@@ -131,190 +125,190 @@ icon: 'building-columns'
 
 ## Top US Brokers Comparison
 
-<div className="bg-gray-50">
-  <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-6 text-center">Popular US Trading Platforms</h3>
+<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+  <h3 className="text-xl font-bold text-slate-200 mb-6 text-center">Popular US Trading Platforms</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    <div className="bg-gray-50">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">F</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">Fidelity</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">$0 stocks, ETFs</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Excellent research tools</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Low-cost index funds</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Great for beginners</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-gray-50">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">R</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">Robinhood</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">$0 everything</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Mobile-first design</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Crypto trading</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Simple interface</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-gray-50">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">C</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">Charles Schwab</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">$0 stocks, ETFs</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Full-service options</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Branch locations</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Professional tools</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-gray-50">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">E</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">E*TRADE</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">$0 stocks, ETFs</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Advanced charting</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Options trading</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Power E*TRADE platform</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-gray-50">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">T</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">TD Ameritrade</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">$0 stocks, ETFs</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>thinkorswim platform</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Excellent education</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Advanced trading tools</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-gray-50">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">I</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">Interactive Brokers</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">$0.005/share</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Global markets access</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Professional tools</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Lowest margin rates</span>
           </div>
         </div>
@@ -325,128 +319,128 @@ icon: 'building-columns'
 
 ## Vietnamese Brokers
 
-<div className="bg-gray-50">
-  <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-6 text-center">🇻🇳 Top Vietnamese Securities Companies</h3>
+<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+  <h3 className="text-xl font-bold text-slate-200 mb-6 text-center">🇻🇳 Top Vietnamese Securities Companies</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
+    <div className="bg-slate-800/50 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">V</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">VPS Securities</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-gray-50 dark:bg-gray-900/30 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">0.15% - 0.25%</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>VPS SmartOne platform</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Strong research team</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Margin trading available</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
+    <div className="bg-slate-800/50 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">S</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">SSI Securities</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-gray-50 dark:bg-gray-900/30 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">0.15% - 0.30%</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>iBoard platform</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Large market share</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Comprehensive services</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
+    <div className="bg-slate-800/50 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">V</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">VNDIRECT</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-gray-50 dark:bg-gray-900/30 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">0.15% - 0.25%</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>VNDIRECT Online</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Investment advisory</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Diverse product range</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
+    <div className="bg-slate-800/50 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">T</span>
         </div>
         <h4 className="font-bold text-gray-900 dark:text-gray-100">Techcom Securities</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-gray-50 dark:bg-gray-900/30 p-3 rounded-lg">
+        <div className="bg-slate-800/50 p-3 rounded-lg">
           <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-1">Trading Fees</div>
           <div className="text-gray-600 dark:text-gray-400 font-bold">0.15% - 0.30%</div>
         </div>
 
         <div className="text-xs text-gray-700 dark:text-gray-300 space-y-1">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>TCBS platform</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>User-friendly interface</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Good customer service</span>
           </div>
         </div>
@@ -457,19 +451,19 @@ icon: 'building-columns'
 
 ## How to Choose the Right Broker
 
-<div className="bg-gray-50">
-  <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-6 text-center">Key Factors to Consider</h3>
+<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+  <h3 className="text-xl font-bold text-slate-200 mb-6 text-center">Key Factors to Consider</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div className="space-y-4">
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="flex items-center gap-3 mb-3">
-          <div className="w-8 h-8 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm"></span>
           </div>
-          <h4 className="font-bold text-slate-800 dark:text-slate-200">Fees & Commissions</h4>
+          <h4 className="font-bold text-slate-200">Fees & Commissions</h4>
         </div>
-        <div className="text-sm text-slate-700 dark:text-slate-300 space-y-1">
+        <div className="text-sm text-slate-300 space-y-1">
           <div>• Stock trading commissions</div>
           <div>• Options contract fees</div>
           <div>• Mutual fund fees</div>
@@ -477,14 +471,14 @@ icon: 'building-columns'
         </div>
       </div>
 
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="flex items-center gap-3 mb-3">
-          <div className="w-8 h-8 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm"></span>
           </div>
-          <h4 className="font-bold text-slate-800 dark:text-slate-200">Platform & Tools</h4>
+          <h4 className="font-bold text-slate-200">Platform & Tools</h4>
         </div>
-        <div className="text-sm text-slate-700 dark:text-slate-300 space-y-1">
+        <div className="text-sm text-slate-300 space-y-1">
           <div>• User interface design</div>
           <div>• Mobile app quality</div>
           <div>• Research tools</div>
@@ -492,14 +486,14 @@ icon: 'building-columns'
         </div>
       </div>
 
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="flex items-center gap-3 mb-3">
-          <div className="w-8 h-8 bg-gray-500 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm">🎓</span>
+          <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
+            <span className="text-white text-sm">graduation-cap</span>
           </div>
-          <h4 className="font-bold text-slate-800 dark:text-slate-200">Education & Support</h4>
+          <h4 className="font-bold text-slate-200">Education & Support</h4>
         </div>
-        <div className="text-sm text-slate-700 dark:text-slate-300 space-y-1">
+        <div className="text-sm text-slate-300 space-y-1">
           <div>• Educational resources</div>
           <div>• Customer service quality</div>
           <div>• Webinars and tutorials</div>
@@ -509,14 +503,14 @@ icon: 'building-columns'
     </div>
 
     <div className="space-y-4">
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="flex items-center gap-3 mb-3">
-          <div className="w-8 h-8 bg-gray-500 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm">🔒</span>
+          <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
+            <span className="text-white text-sm">lock</span>
           </div>
-          <h4 className="font-bold text-slate-800 dark:text-slate-200">Security & Regulation</h4>
+          <h4 className="font-bold text-slate-200">Security & Regulation</h4>
         </div>
-        <div className="text-sm text-slate-700 dark:text-slate-300 space-y-1">
+        <div className="text-sm text-slate-300 space-y-1">
           <div>• SIPC protection (US)</div>
           <div>• Regulatory compliance</div>
           <div>• Account security features</div>
@@ -524,14 +518,14 @@ icon: 'building-columns'
         </div>
       </div>
 
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="flex items-center gap-3 mb-3">
-          <div className="w-8 h-8 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm"></span>
           </div>
-          <h4 className="font-bold text-slate-800 dark:text-slate-200">Investment Options</h4>
+          <h4 className="font-bold text-slate-200">Investment Options</h4>
         </div>
-        <div className="text-sm text-slate-700 dark:text-slate-300 space-y-1">
+        <div className="text-sm text-slate-300 space-y-1">
           <div>• Stock exchanges access</div>
           <div>• International markets</div>
           <div>• Options trading</div>
@@ -539,14 +533,14 @@ icon: 'building-columns'
         </div>
       </div>
 
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="flex items-center gap-3 mb-3">
-          <div className="w-8 h-8 bg-gray-500 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm">💳</span>
+          <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
+            <span className="text-white text-sm">credit-card</span>
           </div>
-          <h4 className="font-bold text-slate-800 dark:text-slate-200">Account Features</h4>
+          <h4 className="font-bold text-slate-200">Account Features</h4>
         </div>
-        <div className="text-sm text-slate-700 dark:text-slate-300 space-y-1">
+        <div className="text-sm text-slate-300 space-y-1">
           <div>• Minimum deposit requirements</div>
           <div>• Margin trading availability</div>
           <div>• Fractional shares</div>
@@ -560,62 +554,62 @@ icon: 'building-columns'
 ## Setting Up Your Account
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-gray-50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <h4 className="text-lg font-bold text-gray-900 dark:text-gray-100 mb-4"> US Account Setup</h4>
 
     <div className="space-y-3">
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">1</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">1</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Choose account type (Individual, Joint, IRA)</div>
       </div>
 
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">2</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">2</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Provide personal information & SSN</div>
       </div>
 
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">3</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">3</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Fund your account (Bank transfer, check)</div>
       </div>
 
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">4</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">4</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Complete trading permissions</div>
       </div>
     </div>
   </div>
 
-  <div className="bg-gray-50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <h4 className="text-lg font-bold text-gray-900 dark:text-gray-100 mb-4">🇻🇳 Vietnamese Account Setup</h4>
 
     <div className="space-y-3">
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">1</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">1</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Provide CMND/CCCD and documents</div>
       </div>
 
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">2</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">2</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Open VSD account (securities depository)</div>
       </div>
 
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">3</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">3</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Link bank account for funding</div>
       </div>
 
-      <div className="flex items-center gap-3 p-3 bg-white/70 dark:bg-slate-800/70 rounded-lg">
-        <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold">4</div>
+      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
+        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center text-white text-xs font-bold">4</div>
         <div className="text-sm text-gray-800 dark:text-gray-200">Complete risk assessment</div>
       </div>
     </div>
   </div>
 </div>
 
-<div className="bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-lg p-6 my-8">
+<div className="bg-slate-800/50 border border-slate-700 rounded-lg p-6 my-8">
   <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-gray-500 rounded-xl flex items-center justify-center flex-shrink-0">
+    <div className="w-8 h-8 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
       <span className="text-white text-lg"></span>
     </div>
     <div>
