--- a/trading/introduction.mdx
+++ b/trading/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Complete Guide to Stock Market Investing'
+title: 'Stock Market Investing Guide'
 description: 'Master the fundamentals of stock market investing from beginner to advanced concepts'
 icon: 'chart-line'
 ---
@@ -8,7 +8,7 @@ icon: 'chart-line'
   <Icon icon="clock" size={16} />
   <span>15 min read</span>
   <span>•</span>
-  <span>Last updated: July 2025</span>
+  <span>Last updated: January 2025</span>
 </div>
 
 <Frame>
@@ -184,50 +184,29 @@ The type of account you choose significantly impacts your investment returns thr
 4. **Roth IRA**: Max out if eligible ($7,000/year)
 5. **Max 401(k)**: Increase to contribution limit if possible
 6. **Taxable Account**: For additional investments and shorter-term goals
-      </div>
-      <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
-        <span className="text-white/90">Listed Companies</span>
-        <span className="font-bold text-lg">5,000+</span>
-      </div>
-    </div>
-  </div>
 
-  <div className="bg-gray-50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-8 h-8 bg-white/20 rounded-lg flex items-center justify-center">
-        <span className="text-lg">🇻🇳</span>
-      </div>
-      <h3 className="text-xl font-bold">Vietnam Markets</h3>
-    </div>
-    <div className="space-y-3">
-      <div className="flex justify-between items-center bg-white/10 p-3 rounded-lg">
-        <span className="text-white/90">Market Cap</span>
-        <span className="font-bold text-lg">$200+ Billion</span>
-      </div>
-      <div className="flex justify-between items-center bg-white/10 p-3 rounded-lg">
-        <span className="text-white/90">GDP Growth</span>
-        <span className="font-bold text-lg">6-7% annually</span>
-      </div>
-      <div className="flex justify-between items-center bg-white/10 p-3 rounded-lg">
-        <span className="text-white/90">Listed Companies</span>
-        <span className="font-bold text-lg">800+</span>
-      </div>
-    </div>
-  </div>
-</div>
+### Why Market Diversification Matters
+
+**Geographic Diversification**: Different countries' economies don't always move in sync. When US markets decline, emerging markets might outperform, and vice versa.
+
+**Currency Exposure**: International investments provide exposure to different currencies, which can serve as a hedge against domestic currency weakness.
+
+**Growth Opportunities**: Emerging markets like Vietnam often offer higher growth potential as their economies develop and modernize.
+
+**Valuation Differences**: Markets trade at different valuations, allowing you to find better values in less popular regions.
 
 ## Historical Returns Analysis
 
-<div className="bg-gray-50">
+<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
   <div className="overflow-x-auto">
     <table className="w-full">
       <thead>
         <tr className="border-b border-slate-200 dark:border-slate-700">
-          <th className="text-left p-4 font-semibold text-slate-700 dark:text-slate-300">Asset Class</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">1-Year</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">5-Year</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">10-Year</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">20-Year</th>
+          <th className="text-left p-4 font-semibold text-slate-300">Asset Class</th>
+          <th className="text-center p-4 font-semibold text-slate-300">1-Year</th>
+          <th className="text-center p-4 font-semibold text-slate-300">5-Year</th>
+          <th className="text-center p-4 font-semibold text-slate-300">10-Year</th>
+          <th className="text-center p-4 font-semibold text-slate-300">20-Year</th>
         </tr>
       </thead>
       <tbody>
@@ -260,21 +239,21 @@ The type of account you choose significantly impacts your investment returns thr
           <td className="text-center p-4 text-gray-600 dark:text-gray-400 font-semibold">7.2%</td>
         </tr>
         <tr className="hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-slate-600 dark:text-slate-400">US Bonds</td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400 font-semibold">2.1%</td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400 font-semibold">2.8%</td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400 font-semibold">3.2%</td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400 font-semibold">4.1%</td>
+          <td className="p-4 font-medium text-slate-400">US Bonds</td>
+          <td className="text-center p-4 text-slate-400 font-semibold">2.1%</td>
+          <td className="text-center p-4 text-slate-400 font-semibold">2.8%</td>
+          <td className="text-center p-4 text-slate-400 font-semibold">3.2%</td>
+          <td className="text-center p-4 text-slate-400 font-semibold">4.1%</td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
 
-<div className="bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-lg p-4 my-6">
+<div className="bg-slate-800/50 border border-slate-700 rounded-lg p-4 my-6">
   <div className="flex items-start gap-3">
-    <div className="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
-      <span className="text-white text-sm">⚠</span>
+    <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
+      <span className="text-white text-sm">RISK</span>
     </div>
     <div>
       <p className="text-gray-800 dark:text-gray-200 text-sm">
@@ -303,9 +282,9 @@ graph LR
 ## Why Stock Trading?
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="group bg-gray-50">
+  <div className="group bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center group-hover:scale-110 transition-transform">
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center group-hover:scale-110 transition-transform">
         <svg className="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
         </svg>
@@ -313,7 +292,7 @@ graph LR
       <h3 className="text-lg font-bold text-gray-900 dark:text-gray-100">Wealth Building</h3>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg mb-4 border border-gray-100 dark:border-gray-800">
+    <div className="bg-slate-800/50 p-4 rounded-lg mb-4 border border-gray-100 dark:border-gray-800">
       <div className="text-sm text-gray-700 dark:text-gray-300 mb-2">
         <strong>$10,000 invested in S&P 500</strong>
       </div>
@@ -324,23 +303,23 @@ graph LR
 
     <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex items-center gap-2">
-        <div className="w-1.5 h-1.5 bg-gray-500 rounded-full"></div>
+        <div className="w-1.5 h-1.5 bg-slate-800 rounded-full"></div>
         <span>Compound interest effect</span>
       </div>
       <div className="flex items-center gap-2">
-        <div className="w-1.5 h-1.5 bg-gray-500 rounded-full"></div>
+        <div className="w-1.5 h-1.5 bg-slate-800 rounded-full"></div>
         <span>Beat inflation (3-4% annually)</span>
       </div>
       <div className="flex items-center gap-2">
-        <div className="w-1.5 h-1.5 bg-gray-500 rounded-full"></div>
+        <div className="w-1.5 h-1.5 bg-slate-800 rounded-full"></div>
         <span>Long-term wealth accumulation</span>
       </div>
     </div>
   </div>
 
-  <div className="group bg-gray-50">
+  <div className="group bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center group-hover:scale-110 transition-transform">
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center group-hover:scale-110 transition-transform">
         <svg className="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
         </svg>
@@ -349,19 +328,19 @@ graph LR
     </div>
 
     <div className="grid grid-cols-2 gap-3 mb-4">
-      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-gray-200 dark:border-gray-800">
+      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-slate-700">
         <div className="text-xl font-bold text-gray-700 dark:text-gray-300">60%</div>
         <div className="text-xs text-gray-600 dark:text-gray-400">US Stocks</div>
       </div>
-      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-gray-200 dark:border-gray-800">
+      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-slate-700">
         <div className="text-xl font-bold text-gray-700 dark:text-gray-300">20%</div>
         <div className="text-xs text-gray-600 dark:text-gray-400">International</div>
       </div>
-      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-gray-200 dark:border-gray-800">
+      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-slate-700">
         <div className="text-xl font-bold text-gray-700 dark:text-gray-300">15%</div>
         <div className="text-xs text-gray-600 dark:text-gray-400">Bonds</div>
       </div>
-      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-gray-200 dark:border-gray-800">
+      <div className="bg-gray-100 dark:bg-gray-900/50 p-3 rounded-lg text-center border border-slate-700">
         <div className="text-xl font-bold text-gray-700 dark:text-gray-300">5%</div>
         <div className="text-xs text-gray-600 dark:text-gray-400">Alternative</div>
       </div>
@@ -381,7 +360,7 @@ graph LR
     | **Financials** | +15.3% | Rising Interest Rates |
   </Tab>
 
-  <Tab title="📉 Laggards">
+  <Tab title="trending-down Laggards">
     | Sector | Performance | Challenges |
     |--------|-------------|------------|
     | **Real Estate** | -8.2% | Interest Rate Sensitivity |
@@ -395,7 +374,7 @@ graph LR
 
 <Steps>
   <Step title="Emergency Fund (Month 1-3)" icon="piggy-bank">
-    <div className="bg-gray-50 border border-gray-200 p-4 rounded-lg">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 border border-gray-200 p-4 rounded-lg">
       <h4 className="font-semibold text-gray-800">Priority #1: Safety Net</h4>
       <p className="text-gray-700 mt-2">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
       <div className="mt-3 text-sm">
@@ -405,14 +384,14 @@ graph LR
   </Step>
 
   <Step title="High-Interest Debt (Month 1-6)" icon="credit-card">
-    <div className="bg-gray-50 border border-gray-200 p-4 rounded-lg">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 border border-gray-200 p-4 rounded-lg">
       <h4 className="font-semibold text-gray-800">Priority #2: Debt Freedom</h4>
       <p className="text-gray-700 mt-2">Pay off credit cards (18-25% interest) before investing in stocks (8-10% expected)</p>
     </div>
   </Step>
 
   <Step title="Begin Investing (Month 6+)" icon="chart-line-up">
-    <div className="bg-gray-50 border border-gray-200 p-4 rounded-lg">
+    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 border border-gray-200 p-4 rounded-lg">
       <h4 className="font-semibold text-gray-800">Priority #3: Wealth Building</h4>
       <p className="text-gray-700 mt-2">Start with broad market index funds, then gradually learn individual stock analysis</p>
     </div>
@@ -425,23 +404,23 @@ graph LR
   <h3 className="text-center font-bold mb-4">Investment Risk-Return Profile</h3>
   <div className="flex justify-between items-end h-32">
     <div className="text-center">
-      <div className="bg-gray-500 h-8 w-16 mb-2 rounded"></div>
+      <div className="bg-slate-800 h-8 w-16 mb-2 rounded"></div>
       <div className="text-xs font-semibold">Savings<br/>1-2%</div>
     </div>
     <div className="text-center">
-      <div className="bg-gray-500 h-16 w-16 mb-2 rounded"></div>
+      <div className="bg-slate-800 h-16 w-16 mb-2 rounded"></div>
       <div className="text-xs font-semibold">Bonds<br/>3-5%</div>
     </div>
     <div className="text-center">
-      <div className="bg-gray-500 h-20 w-16 mb-2 rounded"></div>
+      <div className="bg-slate-800 h-20 w-16 mb-2 rounded"></div>
       <div className="text-xs font-semibold">Div. Stocks<br/>6-8%</div>
     </div>
     <div className="text-center">
-      <div className="bg-gray-500 h-24 w-16 mb-2 rounded"></div>
+      <div className="bg-slate-800 h-24 w-16 mb-2 rounded"></div>
       <div className="text-xs font-semibold">Growth Stocks<br/>8-12%</div>
     </div>
     <div className="text-center">
-      <div className="bg-gray-500 h-32 w-16 mb-2 rounded"></div>
+      <div className="bg-slate-800 h-32 w-16 mb-2 rounded"></div>
       <div className="text-xs font-semibold">Individual Stocks<br/>-50% to +100%</div>
     </div>
   </div>
@@ -456,7 +435,7 @@ graph LR
 
 ## Trading Psychology Quick Assessment
 
-<Accordion title="📝 Test Your Risk Tolerance">
+<Accordion title="document Test Your Risk Tolerance">
   **Scenario**: Your $10,000 investment drops to $7,000 in one month. What do you do?
 
   <div className="space-y-3 mt-4">
@@ -478,8 +457,8 @@ graph LR
 ## Market Sentiment Indicators
 
 <div className="grid grid-cols-2 md:grid-cols-4 gap-4 my-8">
-  <div className="group bg-gray-50">
-    <div className="w-12 h-12 bg-gray-500 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
+  <div className="group bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+    <div className="w-12 h-12 bg-slate-800 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
       <span className="text-2xl font-bold text-white">23</span>
     </div>
     <div className="text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">VIX Fear Index</div>
@@ -491,24 +470,24 @@ graph LR
     </div>
   </div>
 
-  <div className="group bg-gray-50">
-    <div className="w-12 h-12 bg-gray-500 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
+  <div className="group bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+    <div className="w-12 h-12 bg-slate-800 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
       <span className="text-lg font-bold text-white">67%</span>
     </div>
     <div className="text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Bull/Bear Ratio</div>
     <div className="text-xs text-gray-600 dark:text-gray-400">Bullish Sentiment</div>
   </div>
 
-  <div className="group bg-gray-50">
-    <div className="w-12 h-12 bg-gray-500 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
+  <div className="group bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+    <div className="w-12 h-12 bg-slate-800 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
       <span className="text-xl font-bold text-white">1.8</span>
     </div>
     <div className="text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Put/Call Ratio</div>
     <div className="text-xs text-gray-600 dark:text-gray-400">Moderate Fear</div>
   </div>
 
-  <div className="group bg-gray-50">
-    <div className="w-12 h-12 bg-gray-500 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
+  <div className="group bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+    <div className="w-12 h-12 bg-slate-800 rounded-full flex items-center justify-center mx-auto mb-3 group-hover:scale-110 transition-transform">
       <span className="text-lg font-bold text-white">52%</span>
     </div>
     <div className="text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Stocks Above 200MA</div>
@@ -518,15 +497,15 @@ graph LR
 
 ## Economic Calendar Impact
 
-<div className="bg-gray-50">
+<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
   <div className="overflow-x-auto">
     <table className="w-full">
       <thead>
         <tr className="border-b border-slate-200 dark:border-slate-700">
-          <th className="text-left p-4 font-semibold text-slate-700 dark:text-slate-300">Event</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">Impact</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">Frequency</th>
-          <th className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">Market Reaction</th>
+          <th className="text-left p-4 font-semibold text-slate-300">Event</th>
+          <th className="text-center p-4 font-semibold text-slate-300">Impact</th>
+          <th className="text-center p-4 font-semibold text-slate-300">Frequency</th>
+          <th className="text-center p-4 font-semibold text-slate-300">Market Reaction</th>
         </tr>
       </thead>
       <tbody>
@@ -535,60 +514,60 @@ graph LR
             <div className="w-8 h-8 bg-gray-100 dark:bg-gray-900/50 rounded-lg flex items-center justify-center">
               <span className="text-sm"></span>
             </div>
-            <span className="font-medium text-slate-700 dark:text-slate-300">Fed Interest Rate Decision</span>
+            <span className="font-medium text-slate-300">Fed Interest Rate Decision</span>
           </td>
           <td className="text-center p-4">
             <span className="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800 dark:bg-gray-900/30 dark:text-gray-300">
               HIGH
             </span>
           </td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400">8x/year</td>
-          <td className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">±2-5%</td>
+          <td className="text-center p-4 text-slate-400">8x/year</td>
+          <td className="text-center p-4 font-semibold text-slate-300">±2-5%</td>
         </tr>
         <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50 group">
           <td className="p-4 flex items-center gap-3">
             <div className="w-8 h-8 bg-gray-100 dark:bg-gray-900/50 rounded-lg flex items-center justify-center">
               <span className="text-sm"></span>
             </div>
-            <span className="font-medium text-slate-700 dark:text-slate-300">Non-Farm Payrolls</span>
+            <span className="font-medium text-slate-300">Non-Farm Payrolls</span>
           </td>
           <td className="text-center p-4">
             <span className="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800 dark:bg-gray-900/30 dark:text-gray-300">
               MED
             </span>
           </td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400">Monthly</td>
-          <td className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">±1-3%</td>
+          <td className="text-center p-4 text-slate-400">Monthly</td>
+          <td className="text-center p-4 font-semibold text-slate-300">±1-3%</td>
         </tr>
         <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50 group">
           <td className="p-4 flex items-center gap-3">
             <div className="w-8 h-8 bg-gray-100 dark:bg-gray-900/50 rounded-lg flex items-center justify-center">
               <span className="text-sm"></span>
             </div>
-            <span className="font-medium text-slate-700 dark:text-slate-300">GDP Growth Rate</span>
+            <span className="font-medium text-slate-300">GDP Growth Rate</span>
           </td>
           <td className="text-center p-4">
             <span className="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800 dark:bg-gray-900/30 dark:text-gray-300">
               MED
             </span>
           </td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400">Quarterly</td>
-          <td className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">±1-2%</td>
+          <td className="text-center p-4 text-slate-400">Quarterly</td>
+          <td className="text-center p-4 font-semibold text-slate-300">±1-2%</td>
         </tr>
         <tr className="hover:bg-slate-50 dark:hover:bg-slate-800/50 group">
           <td className="p-4 flex items-center gap-3">
             <div className="w-8 h-8 bg-gray-100 dark:bg-gray-900/50 rounded-lg flex items-center justify-center">
               <span className="text-sm"></span>
             </div>
-            <span className="font-medium text-slate-700 dark:text-slate-300">Inflation (CPI)</span>
+            <span className="font-medium text-slate-300">Inflation (CPI)</span>
           </td>
           <td className="text-center p-4">
             <span className="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800 dark:bg-gray-900/30 dark:text-gray-300">
               HIGH
             </span>
           </td>
-          <td className="text-center p-4 text-slate-600 dark:text-slate-400">Monthly</td>
-          <td className="text-center p-4 font-semibold text-slate-700 dark:text-slate-300">±2-4%</td>
+          <td className="text-center p-4 text-slate-400">Monthly</td>
+          <td className="text-center p-4 font-semibold text-slate-300">±2-4%</td>
         </tr>
       </tbody>
     </table>
@@ -622,8 +601,8 @@ graph LR
 
 ## Investment Calculator
 
-<div className="bg-gradient-to-r bg-gray-50 p-6 rounded-lg my-8">
-  <h3 className="text-xl font-bold mb-4">🧮 Compound Interest Calculator</h3>
+<div className="bg-gradient-to-r bg-slate-900/50 p-6 rounded-xl border border-slate-700 p-6 rounded-lg my-8">
+  <h3 className="text-xl font-bold mb-4">calculator Compound Interest Calculator</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div className="space-y-4">
@@ -660,7 +639,7 @@ graph LR
       </div>
     </div>
 
-    <div className="bg-white p-4 rounded-lg shadow">
+    <div className="bg-slate-900/50 p-4 rounded-lg shadow">
       <h4 className="font-bold text-gray-800 mb-3">Projected Results</h4>
       <div className="space-y-3">
         <div className="flex justify-between items-center">
@@ -680,7 +659,7 @@ graph LR
       </div>
 
       <div className="mt-4 h-2 bg-gray-200 rounded-full overflow-hidden">
-        <div className="h-full bg-gradient-to-r from-blue-500 via-green-500 to-purple-500" style={{width: '65%'}}></div>
+        <div className="h-full bg-slate-800" style={{width: '65%'}}></div>
       </div>
       <div className="text-xs text-gray-500 mt-1">65% from investment growth</div>
     </div>
@@ -689,7 +668,7 @@ graph LR
 
 ## Risk Tolerance Quiz
 
-<div className="bg-white border-2 border-gray-200 rounded-lg p-6 my-8">
+<div className="bg-slate-900/50 border-2 border-gray-200 rounded-lg p-6 my-8">
   <h3 className="text-xl font-bold mb-4"> Quick Risk Assessment</h3>
 
   <div className="space-y-6">
