--- a/trading/market-fundamentals.mdx
+++ b/trading/market-fundamentals.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Market Fundamentals: Building Your Investment Foundation'
+title: 'Market Fundamentals'
 description: 'Master essential market concepts, sector analysis, economic indicators, and market psychology for successful investing'
 icon: 'chart-line'
 ---
@@ -134,19 +134,19 @@ icon: 'chart-line'
 ## Trading Volume Analysis
 
 <div className="my-8">
-  <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-4">Daily Trading Patterns</h3>
+  <h3 className="text-lg font-semibold text-slate-200 mb-4">Daily Trading Patterns</h3>
 
   <div className="bg-gradient-to-r bg-slate-900  p-6 rounded-xl border border-slate-800 ">
     <div className="relative">
       {/* Mermaid chart representation with modern styling */}
       <div className="flex items-end justify-between h-32 space-x-2">
         <div className="flex flex-col items-center">
-          <div className="w-8 h-24 bg-gradient-to-t from-indigo-500 to-indigo-400 rounded-t"></div>
+          <div className="w-8 h-24 bg-slate-800 to-indigo-400 rounded-t"></div>
           <div className="text-xs text-slate-600  mt-2">9:30 AM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Opening</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-16 bg-gradient-to-t from-blue-500 to-blue-400 rounded-t"></div>
+          <div className="w-8 h-16 bg-slate-800 to-blue-400 rounded-t"></div>
           <div className="text-xs text-slate-600  mt-2">10:30 AM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Morning</div>
         </div>
@@ -156,17 +156,17 @@ icon: 'chart-line'
           <div className="text-xs text-slate-500 dark:text-slate-500">Lunch</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-16 bg-gradient-to-t from-emerald-500 to-emerald-400 rounded-t"></div>
+          <div className="w-8 h-16 bg-slate-800 to-emerald-400 rounded-t"></div>
           <div className="text-xs text-slate-600  mt-2">2:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Afternoon</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-20 bg-gradient-to-t from-purple-500 to-purple-400 rounded-t"></div>
+          <div className="w-8 h-20 bg-slate-800 to-purple-400 rounded-t"></div>
           <div className="text-xs text-slate-600  mt-2">3:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Power Hour</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-12 bg-gradient-to-t from-red-500 to-red-400 rounded-t"></div>
+          <div className="w-8 h-12 bg-slate-800 to-red-400 rounded-t"></div>
           <div className="text-xs text-slate-600  mt-2">4:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Close</div>
         </div>
@@ -194,7 +194,7 @@ icon: 'chart-line'
 
 <div className="space-y-6 my-8">
   <div className="relative">
-    <div className="absolute left-4 top-8 bottom-0 w-0.5 bg-gradient-to-b from-red-500 via-amber-500 to-emerald-500"></div>
+    <div className="absolute left-4 top-8 bottom-0 w-0.5 bg-slate-800"></div>
 
     <div className="space-y-8">
       <div className="flex gap-6">
@@ -206,7 +206,7 @@ icon: 'chart-line'
         <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
           <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #1: Emergency Fund (Month 1-3)</h4>
           <p className="text-slate-300  mb-3">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
-          <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+          <div className="bg-slate-800/50 p-3 rounded-lg">
             <span className="font-semibold text-slate-100 ">Recommended Amount:</span>
             <span className="text-slate-300 "> $15,000 - $30,000 for most individuals</span>
           </div>
@@ -245,7 +245,7 @@ icon: 'chart-line'
 
 <div className="my-8">
   <div className="bg-gradient-to-r bg-slate-900  p-8 rounded-xl border border-slate-200 ">
-    <h3 className="text-center font-bold text-xl text-slate-800 dark:text-slate-200 mb-6">Investment Risk-Return Profile</h3>
+    <h3 className="text-center font-bold text-xl text-slate-200 mb-6">Investment Risk-Return Profile</h3>
 
     <div className="flex justify-between items-end h-40 mb-6">
       <div className="text-center group">
@@ -306,7 +306,7 @@ icon: 'chart-line'
   <p className="text-slate-300 mb-4">
     Economic indicators are statistical measures that provide insights into the overall health and direction of the economy. These data points influence investor sentiment, corporate earnings expectations, and ultimately, stock prices.
   </p>
-  
+
   <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
     <h4 className="text-slate-200 font-semibold mb-2">Why Economic Indicators Matter for Investors</h4>
     <p className="text-slate-400 text-sm">
@@ -402,7 +402,7 @@ icon: 'chart-line'
   <p className="text-slate-300 mb-6">
     Markets don't move in straight lines—they follow predictable cycles driven by economic conditions, investor psychology, and monetary policy. Understanding these cycles helps you make better investment timing decisions and manage risk appropriately.
   </p>
-  
+
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div className="space-y-4">
       <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
@@ -417,7 +417,7 @@ icon: 'chart-line'
           <p className="text-slate-400"><strong>Strategy:</strong> Begin accumulating positions in quality companies</p>
         </div>
       </div>
-      
+
       <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
         <h4 className="text-blue-400 font-semibold mb-2 flex items-center gap-2">
           <Icon icon="trending-up" size={16} />
@@ -431,7 +431,7 @@ icon: 'chart-line'
         </div>
       </div>
     </div>
-    
+
     <div className="space-y-4">
       <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
         <h4 className="text-amber-400 font-semibold mb-2 flex items-center gap-2">
@@ -445,7 +445,7 @@ icon: 'chart-line'
           <p className="text-slate-400"><strong>Strategy:</strong> Begin taking profits, increase cash positions</p>
         </div>
       </div>
-      
+
       <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
         <h4 className="text-red-400 font-semibold mb-2 flex items-center gap-2">
           <Icon icon="trending-down" size={16} />
@@ -469,7 +469,7 @@ icon: 'chart-line'
   <p className="text-slate-300 mb-6">
     Markets are driven by human emotions—fear and greed being the primary forces. Understanding market psychology helps you avoid common behavioral traps that destroy wealth and instead position yourself to benefit from others' emotional mistakes.
   </p>
-  
+
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
       <h4 className="text-red-400 font-semibold mb-3">Common Psychological Traps</h4>
@@ -492,7 +492,7 @@ icon: 'chart-line'
         </div>
       </div>
     </div>
-    
+
     <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
       <h4 className="text-green-400 font-semibold mb-3">Successful Investor Mindset</h4>
       <div className="space-y-3 text-sm">
