--- a/trading/markets/us-markets.mdx
+++ b/trading/markets/us-markets.mdx
@@ -4,7 +4,7 @@ description: 'Everything you need to know about trading US stocks'
 icon: 'flag-usa'
 ---
 
-<div className="flex items-center gap-2 mb-      <Card title="D      <Card title="Interest Rate Sensitive" color="#6b7280">fensive Sector" color="#6b7280"> text-sm text-gray-600">
+<div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
   <Icon icon="clock" size={16} />
   <span>14 min read</span>
   <span>•</span>
