--- a/trading/fundamentals/basics.mdx
+++ b/trading/fundamentals/basics.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Investment Fundamentals: Building Your Knowledge Foundation'
+title: 'Investment Fundamentals'
 description: 'Master the essential concepts that every successful investor must understand'
 icon: 'book-open'
 ---
@@ -8,7 +8,7 @@ icon: 'book-open'
   <Icon icon="clock" size={16} />
   <span>20 min read</span>
   <span>•</span>
-  <span>Last updated: July 2025</span>
+  <span>Last updated: January 2025</span>
 </div>
 
 <Frame>
@@ -41,7 +41,7 @@ A stock represents fractional ownership in a corporation. When you buy shares, y
 <div className="p-6 rounded-xl border border-slate-700 my-6">
   <div className="flex items-center gap-3 mb-4">
     <div className="w-12 h-12 bg-slate-600 rounded-xl flex items-center justify-center">
-      <span className="text-slate-200 text-xl">📊</span>
+      <span className="text-slate-200 text-xl">bar-chart</span>
     </div>
     <div>
       <h3 className="text-lg font-bold text-slate-200">Stock Ownership Example</h3>
@@ -60,7 +60,7 @@ A stock represents fractional ownership in a corporation. When you buy shares, y
     </div>
     <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
       <div className="text-slate-300 font-semibold text-sm mb-1">Your Income</div>
-      <div className="text-slate-700 dark:text-slate-300 text-sm">Potential dividend payments</div>
+      <div className="text-slate-300 text-sm">Potential dividend payments</div>
     </div>
     <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
       <div className="text-slate-300 font-semibold text-sm mb-1">Your Growth</div>
@@ -202,7 +202,7 @@ Market capitalization (market cap) represents the total value of a company's sha
 ## Key Trading Terms
 
 <CardGroup cols={2}>
-  <Card title="💰 Bid & Ask" icon="handshake" color="#7c3aed">
+  <Card title="dollar-sign Bid & Ask" icon="handshake" color="#7c3aed">
     **Bid**: Highest price buyers are willing to pay
 
     **Ask**: Lowest price sellers are willing to accept
@@ -238,14 +238,14 @@ Market capitalization (market cap) represents the total value of a company's sha
 
 ## Order Types
 
-<div className="bg-gradient-to-br from-slate-50 to-gray-100 dark:from-slate-900 dark:to-gray-800 p-6 rounded-xl border border-slate-200 dark:border-slate-700 my-8">
-  <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-6 text-center">Understanding Order Types is Crucial for Effective Trading</h3>
+<div className="bg-slate-900/50">
+  <h3 className="text-lg font-semibold text-slate-200 mb-6 text-center">Understanding Order Types is Crucial for Effective Trading</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
-    <div className="bg-emerald-50 dark:bg-emerald-900/20 p-5 rounded-xl border border-emerald-200 dark:border-emerald-800">
+    <div className="bg-emerald-50 dark:bg-emerald-900/20 p-5 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-emerald-500 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">⚡</span>
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
+          <span className="text-white text-lg">FAST</span>
         </div>
         <h4 className="text-emerald-800 dark:text-emerald-200 font-bold">Market Order</h4>
       </div>
@@ -256,25 +256,25 @@ Market capitalization (market cap) represents the total value of a company's sha
         <div className="text-xs font-semibold text-emerald-800 dark:text-emerald-200 mb-2">Best for:</div>
         <div className="space-y-1 text-xs text-emerald-700 dark:text-emerald-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-emerald-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Quick execution</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-emerald-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Highly liquid stocks</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-emerald-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>When speed matters most</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-blue-50 dark:bg-blue-900/20 p-5 rounded-xl border border-blue-200 dark:border-blue-800">
+    <div className="bg-blue-50 dark:bg-blue-900/20 p-5 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">🎯</span>
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
+          <span className="text-white text-lg">AIM</span>
         </div>
         <h4 className="text-blue-800 dark:text-blue-200 font-bold">Limit Order</h4>
       </div>
@@ -285,24 +285,24 @@ Market capitalization (market cap) represents the total value of a company's sha
         <div className="text-xs font-semibold text-blue-800 dark:text-blue-200 mb-2">Best for:</div>
         <div className="space-y-1 text-xs text-blue-700 dark:text-blue-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Price control</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Volatile markets</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Non-urgent trades</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-orange-50 dark:bg-orange-900/20 p-5 rounded-xl border border-orange-200 dark:border-orange-800">
+    <div className="bg-orange-50 dark:bg-orange-900/20 p-5 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-orange-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg">🛑</span>
         </div>
         <h4 className="text-orange-800 dark:text-orange-200 font-bold">Stop Order</h4>
@@ -314,15 +314,15 @@ Market capitalization (market cap) represents the total value of a company's sha
         <div className="text-xs font-semibold text-orange-800 dark:text-orange-200 mb-2">Best for:</div>
         <div className="space-y-1 text-xs text-orange-700 dark:text-orange-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-orange-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Risk management</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-orange-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Limiting losses</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-orange-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
             <span>Protecting profits</span>
           </div>
         </div>
@@ -333,10 +333,10 @@ Market capitalization (market cap) represents the total value of a company's sha
 
 ## Financial Metrics
 
-<div className="bg-amber-50 dark:bg-amber-900/20 border border-amber-200 dark:border-amber-800 rounded-lg p-4 my-6">
+<div className="bg-amber-50 dark:bg-amber-900/20 border border-slate-700 rounded-lg p-4 my-6">
   <div className="flex items-start gap-3">
-    <div className="w-6 h-6 bg-amber-500 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
-      <span className="text-white text-sm">💡</span>
+    <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
+      <span className="text-white text-sm">lightbulb</span>
     </div>
     <div>
       <p className="text-amber-800 dark:text-amber-200 text-sm">
@@ -348,19 +348,19 @@ Market capitalization (market cap) represents the total value of a company's sha
 
 ### Valuation Metrics
 
-<div className="bg-gradient-to-br from-violet-50 to-purple-50 dark:from-violet-900/20 dark:to-purple-900/20 p-6 rounded-xl border border-violet-200 dark:border-violet-800 my-8">
+<div className="bg-slate-900/50">
   <div className="text-center mb-6">
-    <h4 className="text-lg font-bold text-slate-800 dark:text-slate-200 mb-2">📊 Key Financial Ratios</h4>
-    <p className="text-slate-600 dark:text-slate-400 text-sm">Essential metrics for stock evaluation</p>
+    <h4 className="text-lg font-bold text-slate-200 mb-2">bar-chart Key Financial Ratios</h4>
+    <p className="text-slate-400 text-sm">Essential metrics for stock evaluation</p>
   </div>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-violet-200 dark:border-violet-700">
+    <div className="bg-slate-800/50 p-5 rounded-xl border border-violet-200 dark:border-violet-700">
       <div className="flex items-center gap-3 mb-3">
-        <div className="w-8 h-8 bg-violet-500 rounded-lg flex items-center justify-center">
+        <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-sm">P/E</span>
         </div>
-        <h5 className="font-bold text-slate-800 dark:text-slate-200">Price-to-Earnings</h5>
+        <h5 className="font-bold text-slate-200">Price-to-Earnings</h5>
       </div>
 
       <div className="bg-violet-50 dark:bg-violet-900/30 p-3 rounded-lg mb-3">
@@ -368,7 +368,7 @@ Market capitalization (market cap) represents the total value of a company's sha
         <div className="font-mono text-sm text-violet-800 dark:text-violet-200">Stock Price ÷ EPS</div>
       </div>
 
-      <div className="text-sm text-slate-700 dark:text-slate-300">
+      <div className="text-sm text-slate-300">
         <div className="mb-2">Shows how much investors pay for each dollar of earnings</div>
         <div className="space-y-1 text-xs">
           <div className="text-emerald-600 dark:text-emerald-400">• Low P/E: Potentially undervalued</div>
@@ -377,12 +377,12 @@ Market capitalization (market cap) represents the total value of a company's sha
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-violet-200 dark:border-violet-700">
+    <div className="bg-slate-800/50 p-5 rounded-xl border border-violet-200 dark:border-violet-700">
       <div className="flex items-center gap-3 mb-3">
-        <div className="w-8 h-8 bg-indigo-500 rounded-lg flex items-center justify-center">
+        <div className="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center">
           <span className="text-white text-sm">P/B</span>
         </div>
-        <h5 className="font-bold text-slate-800 dark:text-slate-200">Price-to-Book</h5>
+        <h5 className="font-bold text-slate-200">Price-to-Book</h5>
       </div>
 
       <div className="bg-indigo-50 dark:bg-indigo-900/30 p-3 rounded-lg mb-3">
@@ -390,7 +390,7 @@ Market capitalization (market cap) represents the total value of a company's sha
         <div className="font-mono text-sm text-indigo-800 dark:text-indigo-200">Stock Price ÷ Book Value</div>
       </div>
 
-      <div className="text-sm text-slate-700 dark:text-slate-300">
+      <div className="text-sm text-slate-300">
         <div className="mb-2">Compares market value to book value</div>
         <div className="space-y-1 text-xs">
           <div className="text-emerald-600 dark:text-emerald-400">• P/B < 1: Below book value</div>
@@ -401,8 +401,8 @@ Market capitalization (market cap) represents the total value of a company's sha
   </div>
 
   <div className="mt-6 bg-slate-100 dark:bg-slate-800 p-4 rounded-lg">
-    <div className="text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Example Calculation:</div>
-    <div className="font-mono text-xs text-slate-600 dark:text-slate-400 space-y-1">
+    <div className="text-sm font-medium text-slate-300 mb-2">Example Calculation:</div>
+    <div className="font-mono text-xs text-slate-400 space-y-1">
       <div>Stock Price: $100</div>
       <div>Earnings Per Share: $5</div>
       <div className="text-violet-600 dark:text-violet-400">P/E Ratio: $100 ÷ $5 = 20x</div>
@@ -412,10 +412,10 @@ Market capitalization (market cap) represents the total value of a company's sha
 
 ## Risk Management Basics
 
-<div className="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 rounded-lg p-6 my-8">
+<div className="bg-red-50 dark:bg-red-900/20 border border-slate-700 rounded-lg p-6 my-8">
   <div className="flex items-start gap-4">
-    <div className="w-12 h-12 bg-red-500 rounded-xl flex items-center justify-center flex-shrink-0">
-      <span className="text-white text-xl">⚠️</span>
+    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
+      <span className="text-white text-xl">alert-triangle</span>
     </div>
     <div>
       <h4 className="text-red-800 dark:text-red-200 font-bold text-lg mb-2">Golden Rule of Trading</h4>
@@ -427,25 +427,25 @@ Market capitalization (market cap) represents the total value of a company's sha
 </div>
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-gradient-to-br from-blue-50 to-cyan-50 dark:from-blue-900/20 dark:to-cyan-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-slate-900/50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">📊</span>
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
+        <span className="text-white text-lg">bar-chart</span>
       </div>
       <h4 className="font-bold text-blue-900 dark:text-blue-100">Position Sizing</h4>
     </div>
     <p className="text-blue-800 dark:text-blue-200 text-sm mb-3">
       Never put more than 2-5% of your portfolio in a single stock
     </p>
-    <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+    <div className="bg-slate-800/50 p-3 rounded-lg">
       <div className="text-xs text-blue-700 dark:text-blue-300">Example: $10,000 portfolio</div>
       <div className="text-blue-600 dark:text-blue-400 font-semibold">Max per stock: $200-$500</div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-red-50 to-pink-50 dark:from-red-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800">
+  <div className="bg-slate-900/50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-red-500 rounded-lg flex items-center justify-center">
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🛑</span>
       </div>
       <h4 className="font-bold text-red-900 dark:text-red-100">Stop Losses</h4>
@@ -453,39 +453,39 @@ Market capitalization (market cap) represents the total value of a company's sha
     <p className="text-red-800 dark:text-red-200 text-sm mb-3">
       Set predetermined exit points to limit losses
     </p>
-    <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+    <div className="bg-slate-800/50 p-3 rounded-lg">
       <div className="text-xs text-red-700 dark:text-red-300">Common rule: -10% stop loss</div>
       <div className="text-red-600 dark:text-red-400 font-semibold">Protects your capital</div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 p-6 rounded-xl border border-green-200 dark:border-green-800">
+  <div className="bg-slate-900/50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-green-500 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">🌍</span>
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
+        <span className="text-white text-lg">globe</span>
       </div>
       <h4 className="font-bold text-green-900 dark:text-green-100">Diversification</h4>
     </div>
     <p className="text-green-800 dark:text-green-200 text-sm mb-3">
       Spread investments across different sectors and asset classes
     </p>
-    <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+    <div className="bg-slate-800/50 p-3 rounded-lg">
       <div className="text-xs text-green-700 dark:text-green-300">Don't put all eggs in one basket</div>
       <div className="text-green-600 dark:text-green-400 font-semibold">Reduces overall risk</div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-violet-50 dark:from-purple-900/20 dark:to-violet-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-slate-900/50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-purple-500 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">🔍</span>
+      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
+        <span className="text-white text-lg">search</span>
       </div>
       <h4 className="font-bold text-purple-900 dark:text-purple-100">Research</h4>
     </div>
     <p className="text-purple-800 dark:text-purple-200 text-sm mb-3">
       Always understand what you're investing in
     </p>
-    <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
+    <div className="bg-slate-800/50 p-3 rounded-lg">
       <div className="text-xs text-purple-700 dark:text-purple-300">Know the company & industry</div>
       <div className="text-purple-600 dark:text-purple-400 font-semibold">Informed decisions only</div>
     </div>
