--- a/trading/investment-tools.mdx
+++ b/trading/investment-tools.mdx
@@ -8,7 +8,7 @@ icon: 'calculator'
   <Icon icon="calculator" size={16} />
   <span>4 min read</span>
   <span>•</span>
-  <span>Last updated: July 2025</span>
+  <span>Last updated: January 2025</span>
 </div>
 
 ## Understanding Compound Interest: The Most Powerful Force in Investing
@@ -44,8 +44,8 @@ Sarah invested 6x less money but ended up with more because she started 10 years
 
 <div className="p-8 rounded-xl border border-slate-700 my-8">
   <div className="text-center mb-6">
-    <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">Investment Growth Calculator</h3>
-    <p className="text-slate-600 dark:text-slate-400">See how your investments can grow with compound returns</p>
+    <h3 className="text-2xl font-bold text-slate-200 mb-2">Investment Growth Calculator</h3>
+    <p className="text-slate-400">See how your investments can grow with compound returns</p>
   </div>
 
   <div className="grid grid-cols-1 lg:grid-cols-2 gap-8">
@@ -62,7 +62,7 @@ Sarah invested 6x less money but ended up with more because she started 10 years
               </div>
               <input
                 type="number"
-                className="w-full pl-8 pr-4 py-3 border border-slate-600 rounded-lg bg-slate-800 text-slate-100 focus:ring-2 focus:ring-slate-500 focus:border-slate-500 transition-colors"
+                className="w-full pl-8 pr-4 py-3 border border-slate-600 rounded-lg bg-slate-800 transition-colors"
                 placeholder="10,000"
                 defaultValue="10000"
               />
@@ -78,7 +78,7 @@ Sarah invested 6x less money but ended up with more because she started 10 years
               </div>
               <input
                 type="number"
-                className="w-full pl-8 pr-4 py-3 border border-slate-600 rounded-lg bg-slate-800 text-slate-100 focus:ring-2 focus:ring-slate-500 focus:border-slate-500 transition-colors"
+                className="w-full pl-8 pr-4 py-3 border border-slate-600 rounded-lg bg-slate-800 transition-colors"
                 placeholder="500"
                 defaultValue="500"
               />
@@ -91,7 +91,7 @@ Sarah invested 6x less money but ended up with more because she started 10 years
             <div className="relative">
               <input
                 type="number"
-                className="w-full pl-4 pr-10 py-3 border border-slate-600 rounded-lg bg-slate-800 text-slate-100 focus:ring-2 focus:ring-slate-500 focus:border-slate-500 transition-colors"
+                className="w-full pl-4 pr-10 py-3 border border-slate-600 rounded-lg bg-slate-800 transition-colors"
                 placeholder="8"
                 defaultValue="8"
               />
@@ -107,7 +107,7 @@ Sarah invested 6x less money but ended up with more because she started 10 years
             <div className="relative">
               <input
                 type="number"
-                className="w-full pl-4 pr-16 py-3 border border-slate-600 rounded-lg bg-slate-800 text-slate-100 focus:ring-2 focus:ring-slate-500 focus:border-slate-500 transition-colors"
+                className="w-full pl-4 pr-16 py-3 border border-slate-600 rounded-lg bg-slate-800 transition-colors"
                 placeholder="20"
                 defaultValue="20"
               />
@@ -148,7 +148,7 @@ Sarah invested 6x less money but ended up with more because she started 10 years
             <span>65% from compound growth</span>
           </div>
           <div className="w-full bg-slate-700 rounded-full h-3 overflow-hidden">
-            <div className="h-full bg-slate-500 rounded-full transition-all duration-1000" style={{width: '65%'}}></div>
+            <div className="h-full bg-slate-800 rounded-full transition-all duration-1000" style={{width: '65%'}}></div>
           </div>
         </div>
       </div>
