--- a/trading/portfolios-and-assets.mdx
+++ b/trading/portfolios-and-assets.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Portfolio Construction & Asset Management'
+title: 'Portfolio Construction'
 description: 'Master the art of building, managing, and optimizing investment portfolios across different asset classes for long-term wealth creation'
 icon: 'briefcase'
 ---
@@ -152,7 +152,7 @@ icon: 'briefcase'
         </div>
 
         <div className="border rounded-lg p-4">
-          <h4 className="font-bold text-blue-700 mb-3">🏢 Corporate Bonds</h4>
+          <h4 className="font-bold text-blue-700 mb-3">building Corporate Bonds</h4>
           <div className="space-y-2 text-sm">
             <div className="flex justify-between">
               <span>Investment Grade:</span>
@@ -181,38 +181,38 @@ icon: 'briefcase'
     </div>
   </Tab>
 
-  <Tab title="🏠 Real Estate (REITs)">
+  <Tab title="home Real Estate (REITs)">
     <div className="space-y-4">
       **REIT Sector Breakdown**
 
       <div className="grid grid-cols-2 md:grid-cols-3 gap-3">
-        <div className="bg-gradient-to-br from-blue-100 to-blue-200 p-3 rounded-lg">
-          <div className="font-bold">🏢 Commercial</div>
+        <div className="bg-slate-900/50">
+          <div className="font-bold">building Commercial</div>
           <div className="text-sm">Office Buildings</div>
           <div className="text-xs text-blue-700">Yield: 6.2%</div>
         </div>
-        <div className="bg-gradient-to-br from-green-100 to-green-200 p-3 rounded-lg">
+        <div className="bg-slate-900/50">
           <div className="font-bold">Residential</div>
           <div className="text-sm">Apartments</div>
           <div className="text-xs text-green-700">Yield: 4.8%</div>
         </div>
-        <div className="bg-gradient-to-br from-purple-100 to-purple-200 p-3 rounded-lg">
-          <div className="font-bold">🏪 Retail</div>
+        <div className="bg-slate-900/50">
+          <div className="font-bold">store Retail</div>
           <div className="text-sm">Shopping Centers</div>
           <div className="text-xs text-purple-700">Yield: 5.4%</div>
         </div>
-        <div className="bg-gradient-to-br from-orange-100 to-orange-200 p-3 rounded-lg">
-          <div className="font-bold">🏭 Industrial</div>
+        <div className="bg-slate-900/50">
+          <div className="font-bold">factory Industrial</div>
           <div className="text-sm">Warehouses</div>
           <div className="text-xs text-orange-700">Yield: 5.1%</div>
         </div>
-        <div className="bg-gradient-to-br from-red-100 to-red-200 p-3 rounded-lg">
-          <div className="font-bold">🏥 Healthcare</div>
+        <div className="bg-slate-900/50">
+          <div className="font-bold">heart Healthcare</div>
           <div className="text-sm">Hospitals</div>
           <div className="text-xs text-red-700">Yield: 5.7%</div>
         </div>
-        <div className="bg-gradient-to-br from-teal-100 to-teal-200 p-3 rounded-lg">
-          <div className="font-bold">💾 Data Centers</div>
+        <div className="bg-slate-900/50">
+          <div className="font-bold">save Data Centers</div>
           <div className="text-sm">Tech Infrastructure</div>
           <div className="text-xs text-teal-700">Yield: 3.9%</div>
         </div>
@@ -220,11 +220,11 @@ icon: 'briefcase'
     </div>
   </Tab>
 
-  <Tab title="🌟 Alternative Assets">
+  <Tab title="star Alternative Assets">
     <div className="space-y-4">
       <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div className="border-2 border-yellow-200 rounded-lg p-4">
-          <h4 className="font-bold text-yellow-700 mb-2">🥇 Commodities</h4>
+          <h4 className="font-bold text-yellow-700 mb-2">medal Commodities</h4>
           <div className="space-y-2 text-sm">
             <div className="flex justify-between">
               <span>Gold (1oz):</span>
@@ -281,26 +281,26 @@ icon: 'briefcase'
         <div className="flex items-center justify-between bg-blue-50 p-2 rounded">
           <span className="text-sm">Age 25: 75% Stocks, 25% Bonds</span>
           <div className="w-16 h-2 bg-gray-200 rounded">
-            <div className="w-3/4 h-2 bg-blue-500 rounded"></div>
+            <div className="w-3/4 h-2 bg-slate-800 rounded"></div>
           </div>
         </div>
         <div className="flex items-center justify-between bg-green-50 p-2 rounded">
           <span className="text-sm">Age 40: 60% Stocks, 40% Bonds</span>
           <div className="w-16 h-2 bg-gray-200 rounded">
-            <div className="w-3/5 h-2 bg-green-500 rounded"></div>
+            <div className="w-3/5 h-2 bg-slate-800 rounded"></div>
           </div>
         </div>
         <div className="flex items-center justify-between bg-orange-50 p-2 rounded">
           <span className="text-sm">Age 65: 35% Stocks, 65% Bonds</span>
           <div className="w-16 h-2 bg-gray-200 rounded">
-            <div className="w-1/3 h-2 bg-orange-500 rounded"></div>
+            <div className="w-1/3 h-2 bg-slate-800 rounded"></div>
           </div>
         </div>
       </div>
     </div>
   </Card>
 
-  <Card title="🏆 Model Portfolios" icon="trophy">
+  <Card title="trophy Model Portfolios" icon="trophy">
     <Tabs>
       <Tab title="Conservative">
         <div className="space-y-2">
@@ -313,7 +313,7 @@ icon: 'briefcase'
             <span className="font-semibold">30%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>🏠 REITs</span>
+            <span>home REITs</span>
             <span className="font-semibold">10%</span>
           </div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-2">
@@ -333,11 +333,11 @@ icon: 'briefcase'
             <span className="font-semibold">30%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>🏠 REITs</span>
+            <span>home REITs</span>
             <span className="font-semibold">7%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>🥇 Commodities</span>
+            <span>medal Commodities</span>
             <span className="font-semibold">3%</span>
           </div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-2">
@@ -353,7 +353,7 @@ icon: 'briefcase'
             <span className="font-semibold">70%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>🌍 International</span>
+            <span>globe International</span>
             <span className="font-semibold">15%</span>
           </div>
           <div className="flex justify-between text-sm">
@@ -361,7 +361,7 @@ icon: 'briefcase'
             <span className="font-semibold">10%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>🌟 Alternatives</span>
+            <span>star Alternatives</span>
             <span className="font-semibold">5%</span>
           </div>
           <div className="text-xs text-slate-500 dark:text-slate-400 mt-2">
@@ -389,7 +389,7 @@ icon: 'briefcase'
     </thead>
     <tbody>
       <tr>
-        <td className="border border-gray-300 p-3">💵 Cash/Money Market</td>
+        <td className="border border-gray-300 p-3">dollar-sign Cash/Money Market</td>
         <td className="border border-gray-300 p-3 text-center">
           <span className="bg-green-100 text-green-800 px-2 py-1 rounded text-xs">LOW</span>
         </td>
@@ -398,7 +398,7 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Instant</td>
         <td className="border border-gray-300 p-3 text-center">Poor</td>
       </tr>
-      <tr className="bg-gray-50">
+      <tr className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
         <td className="border border-gray-300 p-3">Government Bonds</td>
         <td className="border border-gray-300 p-3 text-center">
           <span className="bg-green-100 text-green-800 px-2 py-1 rounded text-xs">LOW</span>
@@ -409,7 +409,7 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Poor</td>
       </tr>
       <tr>
-        <td className="border border-gray-300 p-3">🏢 Corporate Bonds</td>
+        <td className="border border-gray-300 p-3">building Corporate Bonds</td>
         <td className="border border-gray-300 p-3 text-center">
           <span className="bg-yellow-100 text-yellow-800 px-2 py-1 rounded text-xs">MED</span>
         </td>
@@ -418,7 +418,7 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Medium</td>
         <td className="border border-gray-300 p-3 text-center">Fair</td>
       </tr>
-      <tr className="bg-gray-50">
+      <tr className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
         <td className="border border-gray-300 p-3">Large Cap Stocks</td>
         <td className="border border-gray-300 p-3 text-center">
           <span className="bg-yellow-100 text-yellow-800 px-2 py-1 rounded text-xs">MED</span>
@@ -429,7 +429,7 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Good</td>
       </tr>
       <tr>
-        <td className="border border-gray-300 p-3">🚀 Small Cap Stocks</td>
+        <td className="border border-gray-300 p-3">rocket Small Cap Stocks</td>
         <td className="border border-gray-300 p-3 text-center">
           <span className="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">HIGH</span>
         </td>
@@ -438,8 +438,8 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Medium</td>
         <td className="border border-gray-300 p-3 text-center">Good</td>
       </tr>
-      <tr className="bg-gray-50">
-        <td className="border border-gray-300 p-3">🏠 REITs</td>
+      <tr className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
+        <td className="border border-gray-300 p-3">home REITs</td>
         <td className="border border-gray-300 p-3 text-center">
           <span className="bg-yellow-100 text-yellow-800 px-2 py-1 rounded text-xs">MED</span>
         </td>
@@ -465,7 +465,7 @@ icon: 'briefcase'
 ## Portfolio Rebalancing Strategies
 
 <Steps>
-  <Step title="📅 Calendar Rebalancing" icon="calendar">
+  <Step title="calendar Calendar Rebalancing" icon="calendar">
     <div className="bg-blue-50 border border-blue-200 p-4 rounded-lg">
       <h4 className="font-semibold text-blue-800">Time-Based Approach</h4>
       <p className="text-blue-700 mt-2">Rebalance portfolio at fixed intervals regardless of market movements.</p>
@@ -502,7 +502,7 @@ icon: 'briefcase'
 ## Tax-Efficient Portfolio Management
 
 <CardGroup cols={2}>
-  <Card title="🏦 Tax-Advantaged Accounts" icon="piggy-bank" >
+  <Card title="bank Tax-Advantaged Accounts" icon="piggy-bank" >
     <div className="space-y-3">
       **Account Hierarchy for Asset Placement:**
 
@@ -518,7 +518,7 @@ icon: 'briefcase'
         </div>
       </div>
 
-      <div className="text-xs text-slate-500 dark:text-slate-400 mt-3 p-2 bg-gray-50 rounded">
+      <div className="text-xs text-slate-500 dark:text-slate-400 mt-3 p-2 bg-slate-900/50 p-6 rounded-xl border border-slate-700 rounded">
         **2025 Contribution Limits:**<br/>
         401(k): $23,500 (+$7,500 catch-up)<br/>
         IRA: $7,000 (+$1,000 catch-up)
@@ -645,7 +645,7 @@ icon: 'briefcase'
 ## International Diversification
 
 <div className="my-8">
-  <h3 className="text-xl font-bold mb-4">🌍 Global Market Allocation</h3>
+  <h3 className="text-xl font-bold mb-4">globe Global Market Allocation</h3>
 
   <div className="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
     <div className="text-center p-4 bg-blue-50 rounded-lg border">
@@ -661,13 +661,13 @@ icon: 'briefcase'
       <div className="text-xs text-green-600">Europe, Japan, Australia</div>
     </div>
     <div className="text-center p-4 bg-yellow-50 rounded-lg border">
-      <div className="text-2xl mb-2">🌏</div>
+      <div className="text-2xl mb-2">globe</div>
       <div className="font-bold">Emerging Markets</div>
       <div className="text-sm text-slate-500 dark:text-slate-400">5-15%</div>
       <div className="text-xs text-yellow-600">China, India, Brazil</div>
     </div>
     <div className="text-center p-4 bg-purple-50 rounded-lg border">
-      <div className="text-2xl mb-2">🏠</div>
+      <div className="text-2xl mb-2">home</div>
       <div className="font-bold">Frontier/Other</div>
       <div className="text-sm text-slate-500 dark:text-slate-400">0-5%</div>
       <div className="text-xs text-purple-600">Vietnam, small markets</div>
